bk_ida/gccida/g3/copy_insn_notes
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2172:4: error: expected ';' after expression
rtx v12; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2172:5: error: use of undeclared identifier 'v12'
rtx v12; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2173:4: error: expected ';' after expression
rtx v13; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2173:5: error: use of undeclared identifier 'v13'
rtx v13; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2176:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2176:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2178:4: error: expected ';' after expression
rtx note; // [rsp+18h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2178:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+18h] [rbp-40h] BYREF 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2198:1: error: use of undeclared identifier 'note'
note = copy_rtx_and_substitute( rtx, map, 0); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2199:19: error: use of undeclared identifier 'note'; did you mean 'nice'?
subst_constants( &note, 0LL, map, 0); 
                  ^~~~
                  nice
/usr/include/unistd.h:601:12: note: 'nice' declared here
extern int nice (int __inc) __THROW __wur;
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2201:1: error: use of undeclared identifier 'v12'
v12 = note; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2201:7: error: use of undeclared identifier 'note'; did you mean 'none'?
v12 = note; 
      ^~~~
      none
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2202:33: error: use of undeclared identifier 'note'; did you mean 'goto'?
v7[3].fld[0].rtwint = ( __int64)note; 
                                ^~~~
                                goto
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2202:33: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2203:7: error: use of undeclared identifier 'v12'
if ( !v12 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2213:1: error: use of undeclared identifier 'v13'
v13 = v12; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2213:7: error: use of undeclared identifier 'v12'
v13 = v12; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2214:1: error: use of undeclared identifier 'v12'
v12 = ( rtx)v12[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/integrate.c:2215:20: error: use of undeclared identifier 'v13'
v14 = *( ( _BYTE *)v13 + 2); 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_notes/src/obj/integrate.o] Error 1
